--- a/.github/workflows/deploy_gh_pages.yaml
+++ b/.github/workflows/deploy_gh_pages.yaml
@@ -41,7 +41,9 @@ jobs:
 
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
-       
+        with:
+          ruby-version: 3
+          bundler-cache: false
 
       - name: Build site
         run: bundle exec jekyll b -d "_site${{ steps.pages.outputs.base_path }}"
